Refactor gradle project
Signed-off-by: andreypfau <andreypfau@ton.org>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
+group=org.ton
+version=0.5.0
+
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
-kotlin.version=1.9.20
