--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,21 @@
 [versions]
-coroutines = "1.7.3" # https://search.maven.org/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core
-datetime = "0.5.0" # https://search.maven.org/artifact/org.jetbrains.kotlinx/kotlinx-datetime
-atomicfu = "0.23.1" # https://search.maven.org/artifact/org.jetbrains.kotlinx/atomicfu
-benchmark = "0.4.7" # https://search.maven.org/artifact/org.jetbrains.kotlinx/kotlinx-benchmark-runtime
-serialization = "1.6.2" # https://search.maven.org/artifact/org.jetbrains.kotlinx/kotlinx-serialization-core
-ktor = "2.3.7" # https://search.maven.org/artifact/io.ktor/ktor
-curve25519 = "0.0.4" # https://search.maven.org/artifact/io.github.andreypfau/curve25519-kotlin
-bignum = "0.3.8" # https://search.maven.org/artifact/com.ionspin.kotlin/bignum
-crypto = "0.0.2"
-cache4k = "0.12.0" # https://central.sonatype.com/namespace/io.github.reactivecircus.cache4k
-bcv = "0.13.2"
-kotlinx-io = "0.3.1" # https://central.sonatype.com/artifact/org.jetbrains.kotlinx/kotlinx-io-core/versions
+kotlin = "2.1.21"
+java = "8"
+coroutines = "1.10.2" # https://search.maven.org/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core
+datetime = "0.6.2" # https://search.maven.org/artifact/org.jetbrains.kotlinx/kotlinx-datetime
+atomicfu = "0.27.0" # https://search.maven.org/artifact/org.jetbrains.kotlinx/atomicfu
+benchmark = "0.4.14" # https://search.maven.org/artifact/org.jetbrains.kotlinx/kotlinx-benchmark-runtime
+serialization = "1.8.1" # https://search.maven.org/artifact/org.jetbrains.kotlinx/kotlinx-serialization-core
+ktor = "3.1.3" # https://central.sonatype.com/artifact/io.ktor/ktor-server
+curve25519 = "0.0.8" # https://search.maven.org/artifact/io.github.andreypfau/curve25519-kotlin
+bignum = "0.3.10" # https://search.maven.org/artifact/com.ionspin.kotlin/bignum
+crypto = "0.0.4" # https://central.sonatype.com/artifact/io.github.andreypfau/kotlinx-crypto-subtle
+cache4k = "0.14.0" # https://central.sonatype.com/namespace/io.github.reactivecircus.cache4k
+bcv = "0.17.0" # https://central.sonatype.com/artifact/org.jetbrains.kotlinx/binary-compatibility-validator
+kotlinx-io = "0.7.0" # https://central.sonatype.com/artifact/org.jetbrains.kotlinx/kotlinx-io-core
 
 [libraries]
+kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 coroutines-jvm = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8", version.ref = "coroutines" }
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
@@ -40,3 +43,5 @@ hmac = { module = "io.github.andreypfau:kotlinx-crypto-hmac", version.ref = "cry
 [plugins]
 bcv = { id = "org.jetbrains.kotlinx.binary-compatibility-validator", version.ref = "bcv" }
 publish = { id = "com.vanniktech.maven.publish", version = "0.28.0" }
+kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
