--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,57 +1,122 @@
-#name: Release
-#on:
-#  push:
-#    branches:
-#      - main
-#
-#jobs:
-#  build:
-#    if: "!contains(github.event.commits[0].message, '[skip ci]')"
-#    strategy:
-#      matrix:
-#        include:
-#          - os: macos-latest
-#            gradle_args: assemble publishIosX64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishIosArm64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishIosSimulatorArm64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishTvosX64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishTvosArm64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishTvosSimulatorArm64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishWatchosArm32PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishWatchosArm64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishWatchosX64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishWatchosSimulatorArm64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishMacosX64PublicationToSonatypeRepository
-#          - os: macos-latest
-#            gradle_args: assemble publishMacosArm64PublicationToSonatypeRepository
-#          - os: ubuntu-latest
-#            gradle_args: assemble publishKotlinMultiplatformPublicationToSonatypeRepository publishJvmPublicationToSonatypeRepository publishLinuxX64PublicationToSonatypeRepository publishLinuxArm64PublicationToSonatypeRepository publishMingwX64PublicationToSonatypeRepository
-#
-#    runs-on: ${{ matrix.os }}
-#    steps:
-#      - name: Checkout project sources
-#        uses: actions/checkout@v3
-#      - uses: actions/setup-java@v3
-#        with:
-#          distribution: liberica
-#          java-version: 8
-#      - name: Build using gradle
-#        uses: gradle/gradle-build-action@v2
-#        with:
-#          arguments: ${{ matrix.gradle_args }}
-#        env:
-#          SIGNING_SECRET_KEY: ${{ secrets.SIGNING_SECRET_KEY }}
-#          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
-#          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-#          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+name: Release
+
+on:
+  push:
+    tags:
+      - 'v*'
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  packages: write
+
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
+
+env:
+  GRADLE_USER_HOME: ${{ github.workspace }}/.gradle
+  JAVA_VERSION: '17'
+
+jobs:
+  verify-linux:
+    name: Verify (Linux)
+    runs-on: ubuntu-latest
+    timeout-minutes: 45
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: ${{ env.JAVA_VERSION }}
+      - name: Install Kotlin/Native toolchain deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends -y build-essential libcurl4-openssl-dev libssl-dev zlib1g-dev
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-home-cache-cleanup: true
+      - name: Run checks
+        run: ./gradlew --stacktrace clean check
+
+  verify-macos:
+    name: Verify (macOS)
+    runs-on: macos-latest
+    timeout-minutes: 45
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: ${{ env.JAVA_VERSION }}
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-home-cache-cleanup: true
+      - name: Build & test Apple targets
+        run: ./gradlew --stacktrace macosArm64Test
+
+  publish:
+    name: Publish
+    needs:
+      - verify-linux
+      - verify-macos
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    environment:
+      name: release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: ${{ env.JAVA_VERSION }}
+      - name: Install Kotlin/Native toolchain deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends -y build-essential libcurl4-openssl-dev libssl-dev zlib1g-dev
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-home-cache-cleanup: true
+      - name: Publish artifacts
+        env:
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
+          ORG_GRADLE_PROJECT_githubPackagesUsername: ${{ github.actor }}
+          ORG_GRADLE_PROJECT_githubPackagesPassword: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          ./gradlew --stacktrace \
+            publishAllPublicationsToGitHubPackagesRepository \
+            publishAllPublicationsToMavenCentralRepository \
+            closeAndReleaseSonatypeStagingRepository
+      - name: Generate changelog
+        id: changelog
+        uses: orhun/git-cliff-action@v2
+        with:
+          config: git-cliff.toml
+          args: --current --tag ${{ github.ref_name }}
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          body: ${{ steps.changelog.outputs.changelog }}
+          fail_if_release_exists: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
