--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
+org.gradle.caching=true
+kotlin.native.cacheKind=static
 kotlin.version=1.9.20
