--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,6 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 kotlin.native.cacheKind=static
 kotlin.version=1.9.20
