update Docker version in docs
Signed-off-by: andreypfau <andreypfau@ton.org>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,7 @@ permissions:
 
 env:
   INSTANCE: 'Writerside/hi'
-  DOCKER_VERSION: 'XXX.YYYYY'
+  DOCKER_VERSION: '2025.04.8412'
 
 jobs:
   build:
